# littleOS

./: .gitignore  .gitmodules  BUILD_SUCCESS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  REORGANIZATION_GUIDE.md  SAGELANG_QUICKSTART.md  UPDATES.md  build-risc.sh  build.sh  memmap.ld  pico_sdk_import.cmake  rp2040.ld
boot/: boot.c  startup.S
build_picow/: Makefile
build_picow/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_picow/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build_picow/pioasm/: Makefile  pioasm
build_test_pico/: Makefile
build_test_pico/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_test_pico/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build_w/: Makefile
build_w/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
build_w/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
build_w/pioasm/: Makefile
docs/: BOOT_SEQUENCE.md  DIRECTORY_STRUCTURE.md  DMESG.md  GPIO_INTEGRATION.md  MULTICORE.md  QUICK_REFERENCE.md  SAGELANG_INTEGRATION.md  SCRIPT_STORAGE.md  SHELL_FEATURES.md  SUPERVISOR.md  SYSTEM_INFO.md  littleOS_Guide.md
include/: config_storage.h  coredump.h  cron.h  devfs.h  display.h  dmesg.h  dvi_console.h  fs.h  ipc.h  littlefetch.h  logcat.h  lwipopts.h  memory.h  memory_segmented.h  module.h  mqtt.h  multicore.h  neopixel.h  net.h  ota.h  permissions.h  pkg.h  procfs.h  profiler.h  regs.h  remote_shell.h  sage_embed.h  scheduler.h  script_storage.h  sensor.h  sensor_validation.h  shell_env.h  supervisor.h  syslog.h  system_info.h  tmux.h  trace.h  tusb_config_host.h  uart.h  users_config.h  (+2 more)
include/board/: board_config.h  pinout_feather_rp2350.h  pinout_pico.h
include/drivers/: display_module.h
include/hal/: adc.h  dma.h  flash.h  gpio.h  hstx_dvi.h  i2c.h  pio.h  power.h  pwm.h  rtc.h  spi.h  timer.h  usb_device.h  usb_host.h
include/usb_host_config/: tusb_config.h
src/: config_storage.c  kernel.c  main.c  multicore.c  sage_config.c  sage_embed.c  sage_gpio.c  sage_multicore.c  sage_system.c  sage_time.c  sage_watchdog.c  supervisor.c  system_info.c  uart.c  watchdog.c
src/drivers/: display.c  drv_sh1107.c  drv_ssd1306.c  dvi_console.c  fs.c  memory.c  mqtt.c  multicore.c  neopixel.c  net.c  ota.c  remote_shell.c  scheduler.c  sensor.c  sensor_validation.c  supervisor.c  uart.c  watchdog.c
src/drivers/fs/: fs_core.c  fs_dir.c  fs_file.c  fs_inode.c
src/hal/: adc.c  dma.c  flash.c  gpio.c  hstx_dvi.c  i2c.c  pio.c  power.c  pwm.c  rtc.c  spi.c  timer.c  usb_device.c  usb_host.c
src/kernel/: dmesg.c  ipc.c  kernel.c  memory_segmented.c  module.c  module_builtins.c
src/sage/: sage_embed.c  sage_gpio.c  sage_system.c  sage_watchdog.c
src/shell/: cmd_adcstream.c  cmd_benchmark.c  cmd_coredump.c  cmd_cron.c  cmd_dev.c  cmd_display.c  cmd_display_dvi.c  cmd_dma.c  cmd_dmesg.c  cmd_env.c  cmd_fs.c  cmd_gpiowatch.c  cmd_hw.c  cmd_i2cscan.c  cmd_ipc.c  cmd_logcat.c  cmd_man.c  cmd_memory.c  cmd_mod.c  cmd_mqtt.c  cmd_neopixel.c  cmd_net.c  cmd_ota.c  cmd_perms.c  cmd_pinout.c  cmd_pio.c  cmd_pkg.c  cmd_power.c  cmd_proc.c  cmd_profile.c  cmd_pwmtune.c  cmd_remote.c  cmd_rtc.c  cmd_sage.c  cmd_script.c  cmd_selftest.c  cmd_sensor.c  cmd_supervisor.c  cmd_syslog.c  cmd_tasks.c  (+10 more)
src/storage/: script_storage.c
src/sys/: coredump.c  cron.c  devfs.c  littlefetch.c  logcat.c  permissions.c  pkg.c  procfs.c  profiler.c  shell_env.c  syslog.c  system_info.c  tmux.c  trace.c  watchpoint.c
src/usr/: users_config.c
tests/: test-suite.sh
